Remove flex gap for bugfix

--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
     min-height: 100vh;
  }
 
